# lint_it_all

./: .clang-tidy  .gitmodules  BUILD  MODULE.bazel  README.md  hello_world.c  requirements_lock.txt
.aspect/cli/: config.yaml
example/: MODULE.bazel
example/src/: BUILD
template/: BUILD  MODULE.bazel
template/.aspect/cli/: config.yaml
template/tools/format/: BUILD
template/tools/lint/: linters.bzl
tools/: BUILD  init_repo.py
tools/format/: BUILD
tools/init/: BUILD  init_repo.py
tools/lint/: BUILD
