bazel_dep(name = "lint_it_all", version = "0.0.0")
local_path_override(module_name = "lint_it_all", path = "..")

archive_override(
    module_name = "aspect_rules_lint",
    strip_prefix = "rules_lint-1.0.0-rc7",
    urls = "https://github.com/aspect-build/rules_lint/releases/download/v1.0.0-rc7/rules_lint-v1.0.0-rc7.tar.gz",
    integrity = "sha256-ndmyATkHCmQ0ZEZ3iRrfMzYTx5z7D8DerVvk9j+90Ag=",
    patches = [
        "third_party/rules_lint/0001-Add-C-example-and-file-extension.patch",
        "third_party/rules_lint/0001-Update-bazel-lib.patch",
    ],
    patch_strip = 1,
)

